--- a/debian/rules
+++ b/debian/rules
@@ -1,16 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-#
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
-#
-# Modified to make a template file for a multi-binary package with separated
-# build-arch and build-indep targets  by Bill Allombert 2001
 
-# Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
 NUMJOBS = 1
@@ -18,18 +8,31 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 endif
 
+build3vers := $(shell py3versions -sv)
+
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
 %:
-	dh $@ --parallel --with autoreconf
+	dh $@ --fail-missing --parallel --with autoreconf,python2,python3
 
 override_dh_auto_configure:
-	./configure --without-foma --with-unicode-handler=ICU --enable-all-tools --prefix=/usr
+	dh_auto_configure -- --disable-static --with-unicode-handler=ICU --enable-all-tools
 
 override_dh_auto_build:
-	./scripts/generate-cc-files.sh
-	make -j$(NUMJOBS) || make -j$(NUMJOBS) || make
+	$(MAKE) -j$(NUMJOBS) || $(MAKE) -j$(NUMJOBS) || $(MAKE)
+	set -e && for i in $(build3vers); do \
+		cd $(CURDIR)/python && python$$i setup.py build_ext && strip --strip-unneeded build/*/*.so; \
+	done
 
 override_dh_auto_test:
-	# Skip, as it breaks in various unpredictable ways
+	make -j1 check
+
+override_dh_auto_install:
+	dh_auto_install
+	set -e && for i in $(build3vers); do \
+		cd $(CURDIR)/python && python$$i setup.py install --no-compile --prefix /usr --install-layout deb --root $(CURDIR)/debian/tmp; \
+	done
+	find $(CURDIR) -type f -name '*.pyc' -exec rm -f '{}' \;
+	find $(CURDIR) -type f -name '*.pyo' -exec rm -f '{}' \;
+	find $(CURDIR) -type f -name '*.la' -exec rm -f '{}' \;
