--- a/libhfst/src/parsers/Makefile.am
+++ b/libhfst/src/parsers/Makefile.am
@@ -121,7 +121,7 @@ htwolc3pre-lexer.ll: htwolcpre3-parser.$(HEADER)
 libhfstparsers_la_SOURCES=$(XRE_SRCS) $(PMATCH_SRCS) $(LEXC_SRCS) $(XFST_SRCS) $(SFST_SRCS) $(TWOLC_SRCS)
 
 AM_CPPFLAGS=-I${top_srcdir}/libhfst/src/parsers -I${top_srcdir}/libhfst/src \
-		-Wno-deprecated
+		-Wno-deprecated ${GLIB_CPPFLAGS} ${ICU_CPPFLAGS}
 
 if WANT_MINGW
   AM_CPPFLAGS += -I${top_srcdir}/back-ends/dlfcn -DWINDOWS
