--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: cpp
 
-# let linux be Ubuntu 14.04 Trusty
+# let linux be Ubuntu 16.04 Xenial
 sudo: required
-dist: trusty
+dist: xenial
 
 os:
   - linux
@@ -14,22 +14,27 @@ cache:
 
 before_install:
     - echo "$TRAVIS_OS_NAME"
-    - if [[ "$TRAVIS_OS_NAME" = "linux" ]];then wget http://apertium.projectjj.com/apt/install-nightly.sh -O - | sudo bash; fi
-    - if [[ "$TRAVIS_OS_NAME" = "linux" ]];then sudo apt-get install -y autopoint dh-autoreconf libpython3-all-dev libreadline-dev libreadline6-dev python3-all python3-all-dev swig swig2.0; fi
-    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then wget http://apertium.projectjj.com/osx/install-nightly.sh -O - | sudo bash; fi
+#    - if [[ "$TRAVIS_OS_NAME" = "linux" ]];then wget http://apertium.projectjj.com/apt/install-nightly.sh -O - | sudo bash; fi
+    - if [[ "$TRAVIS_OS_NAME" = "linux" ]];then sudo apt-get install -y autopoint dh-autoreconf libpython3-all-dev libreadline-dev libreadline6-dev python3-all-dev swig; fi
+#    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then wget http://apertium.projectjj.com/osx/install-nightly.sh -O - | sudo bash; fi
     - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then brew update; fi
-    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then brew install bison flex; fi
-    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then export "PATH=/usr/local/opt/bison/bin:$PATH"; fi
+    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then brew install bison flex icu4c glib; fi
+    - if [[ "$TRAVIS_OS_NAME" = "osx" ]];then export "PATH=$(brew --prefix bison)/bin:$(brew --prefix icu4c)/bin:$PATH"; fi
 
 # TODO: "apt-get build-dep hfst" fails with "Unable to find a source package for hfst";
 # is there a source package in the nightly repo?
+
+env:
+  - CONFIG_EXTRA=""
+  - CONFIG_EXTRA="--with-unicode-handler=icu"
+  # - CONFIG_EXTRA="--with-unicode-handler=glib"
 
 script:
     - ./autogen.sh
     - export CCACHE_ARGS=()
     - if command -v ccache >/dev/null 2>/dev/null; then CCACHE_ARGS+=( CC="ccache gcc" ); CCACHE_ARGS+=( CXX="ccache g++" ); fi
     - echo "${CCACHE_ARGS[@]:-}"
-    - ./configure --enable-xfst --enable-proc --without-foma --enable-lexc --enable-all-tools --enable-silent-rules "${CCACHE_ARGS[@]:-}"
+    - ./configure --enable-xfst --enable-proc --without-foma --enable-lexc --enable-all-tools "${CCACHE_ARGS[@]:-}" ${CONFIG_EXTRA}
     - if [[ $CXX = g++ ]]; then make -j2; else make -j; fi
     - make check VERBOSE=1
 
